<resources>
    <string name="app_name">Emergency Assistant</string>

    <string name="splash_screen_description">Splash screen</string>
    <string name="splash_screen_logo">Vuforia Logo</string>

    <string name="main_image_target_label">Image Target</string>
    <string name="main_model_target_label">Model Target</string>

    <string name="title_activity_vuforia">Vuforia Augmented Reality</string>
    <string name="ar_info_text">Vuforia Engine</string>

    <string name="ok">OK</string>
    <string name="error_dialog_title">Vuforia error</string>

    <string name="school">School</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>

    <string name="select_text">Выберите ситуацию для воспроизведения симуляции</string>
    <string name="fire">Пожар</string>
    <string name="fire_di">Неконтролируемый процесс горения вне специального очага, возникший непроизвольно или по злому умыслу</string>
    <string name="terr_di">Преступление, главной целью которого является нарушение общественной безопасности</string>
    <string name="terr_text">Терроризм</string>
</resources>
