<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Select_CHS">

    <TextView
        android:id="@+id/select_text"
        android:layout_width="302dp"
        android:layout_height="50dp"
        android:text="@string/select_text"
        android:textColor="#A93C05"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="341dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_3"
        app:layout_constraintTop_toBottomOf="@id/select_text"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/fire_text"
        android:layout_width="214dp"
        android:layout_height="25dp"
        android:ems="10"
        android:text="@string/fire"
        android:textColor="#A93C05"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="@id/rectangle_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_3"
        app:layout_constraintVertical_bias="0.588" />

    <View
        android:id="@+id/rectangle_5"
        android:layout_width="211dp"
        android:layout_height="137dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="180dp" />

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/fire_i"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="190dp"
        android:layout_height="109dp"
        android:layout_marginStart="20dp"
        android:gravity="top"
        android:text="@string/fire_di"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_5"
        app:layout_constraintStart_toStartOf="@+id/rectangle_5"
        app:layout_constraintTop_toTopOf="@+id/rectangle_5"
        app:layout_constraintVertical_bias="0.464"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="341dp"
        android:layout_height="42dp"
        android:layout_marginTop="292dp"
        android:background="@drawable/rectangle_3"
        app:layout_constraintTop_toBottomOf="@id/select_text"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/terrorism_text"
        android:layout_width="214dp"
        android:layout_height="25dp"
        android:ems="10"
        android:text="@string/terr_text"
        android:textColor="#A93C05"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="@+id/rectangle_4"
        app:layout_constraintTop_toTopOf="@+id/rectangle_4"
        app:layout_constraintVertical_bias="0.588" />

    <View
        android:id="@+id/rectangle_20"
        android:layout_width="211dp"
        android:layout_height="137dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="445dp" />

    <TextView
        android:id="@+id/terr_id"
        android:layout_width="190dp"
        android:layout_height="109dp"
        android:layout_marginTop="284dp"
        android:gravity="top"
        android:text="@string/terr_di"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_5"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toEndOf="@+id/rectangle_8"
        app:layout_constraintTop_toTopOf="@+id/rectangle_5"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/rectangle_8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/counter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738"
        tools:ignore="MissingConstraints" />
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/fire_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946" />

</androidx.constraintlayout.widget.ConstraintLayout>