<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">


    <!-- Ellipse 1 -->

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/fire_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ellipse_1"
        app:layout_constraintVertical_bias="0.017"
        tools:ignore="MissingConstraints">

    </View>

    <EditText
        android:id="@+id/edit_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/school"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellipse_1"
        app:layout_constraintVertical_bias="0.116"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text1"
        app:layout_constraintVertical_bias="0.069"
        tools:ignore="DuplicateIds,MissingConstraints">

    </View>

    <EditText
        android:id="@+id/edit_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellipse_1"
        app:layout_constraintVertical_bias="0.35"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text2"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="DuplicateIds,MissingConstraints">

    </View>

    <EditText
        android:id="@+id/edit_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/sign_up"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828"
        android:onClick="goToActivity"/>

    <TextView
        android:id="@+id/but_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/sign_up"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="@+id/sign_up"
        app:layout_constraintTop_toTopOf="@+id/sign_up"
        app:layout_constraintVertical_bias="0.535"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>